--- a/waybar/style.css
+++ b/waybar/style.css
@@ -6,6 +6,7 @@
     font-weight: 500;
     font-size: 14px;
     padding: 0;
+    /* margin: 5px; */
 }
 
 window#waybar {
@@ -28,27 +29,7 @@ tooltip {
     padding: 2px 8px;
 }
 
-#workspaces {
-    background-color: #303536;
-    margin: 6px 0px 6px 6px;
-    border: 2px solid #434a4c;
-}
 
-#workspaces button {
-    all: initial;
-    min-width: 0;
-    box-shadow: inset 0 -3px transparent;
-    padding: 2px 4px;
-    color: #c7ab7a;
-}
-
-#workspaces button.active {
-    color: white;
-}
-
-#workspaces button.urgent {
-    background-color: #e78a4e;
-}
 
 #clock {
     background-color: #303536;
@@ -89,4 +70,40 @@ tooltip {
     background-color: #ddc7a1;
     border: 2px solid #c7ab7a;
     color: #c14a4a;
+}
+
+/* Taskbar */
+#taskbar button {
+    background-color: #303536;
+    border: 2px solid #434a4c;
+    padding: 6px 6px 6px 6px;
+}
+
+#taskbar button.active {
+    background-color: #434a4c;
+    color: #d4be98;
+}
+
+/* Workspaces */
+#workspaces {
+    background-color: #303536;
+    margin-right: 5px;
+    border: 2px solid #434a4c;
+    padding: 3px;
+}
+
+#workspaces button {
+    all: initial;
+    min-width: 0;
+    box-shadow: inset 0 -3px transparent;
+    padding: 2px 4px;
+    color: #c7ab7a;
+}
+
+#workspaces button.active {
+    color: white;
+}
+
+#workspaces button.urgent {
+    background-color: #e78a4e;
 }
