feat: add shutdown and shortcuts help scripts with wofi

--- a/wofi/style.css
+++ b/wofi/style.css
@@ -32,6 +32,7 @@ border: none;
 margin: 5px;
 border: none;
 color: #ebdbb2;
+font-family: "JetBrains Mono", "Fira Code", "Cascadia Code", "Consolas", monospace;
 }
 
 #entry:selected {
